--- a/fetch.html
+++ b/fetch.html
@@ -2,27 +2,28 @@
 <html>
    <head>
       <title>Fetch Planets</title>
-      <script>
-
-          let index = Math.floor(Math.random() * 6);
-          
+      <script>        
          window.addEventListener("load", function(){
-            fetch("https://handlers.education.launchcode.org/static/planets.json").then(function(response) {
-                response.json().then(function(json) {
-                    const destination = document.getElementById("destination");
-                    
-                    destination.addEventListener("click", function(){
-                        destination.innerHTML = `
+            //how to fetch data
+            fetch("https://handlers.education.launchcode.org/static/planets.json").then(function(response){
+               //function to retrieve the data and input to the page tag "destination"
+               response.json().then(function(json) {
+                  const destination = document.getElementById("destination");
+                  let index = 0;
+                  destination.addEventListener("click", function(){
+                     // template literal
+                     destination.innerHTML = `
                         <div>
-                        <h3>Planet ${index.name}</h3>
-                        <img src=${index.image} height=250></img>
+                           <h3>Planet ${json[index].name}</h3> 
+                           <img src=${json[index].image} height=250></img> 
                         </div>
-                    `;
-                    index = (index + 1 )% 6;// this is a modulo??
-                    });
-                });
+                     `;
+                     index = (index + 1) % json.length; //modulo we want to cap the value of index so that it does not exceed the length of the planets array
+                     console.log(index);
+                  });
+               });
             });
-        });
+      });
 </script>
    </head>
    <body>
